# discrete_optimization

./: CMakeLists.txt  README.md  main.cpp
application/: CMakeLists.txt  main.cpp  perf_app.cpp  rational_test.cpp
forward_method/: CMakeLists.txt  forward_method.cpp  forward_method.hpp
graph/: CMakeLists.txt  graph.cpp  graph.hpp  main.cpp
lp_algs/: CMakeLists.txt  lp_algs.cpp  lp_algs.hpp
lp_algs/headers/: lp_algs.hpp
lp_algs/include/: lp_algs.hpp
lp_algs/source/: lp_algs.cpp
lp_algs/sources/: lp_algs.cpp
lp_algs_dev/: CMakeLists.txt
lp_algs_dev/headers/: lp_algs_dev.hpp
lp_algs_dev/source/: lp_algs_dev.cpp
lp_methods/: CMakeLists.txt  lp_methods.cpp  lp_methods.hpp
perfomance_collection/: CMakeLists.txt  main.cpp  perf.cpp  perf.hpp
perfomance_collection/headers/: perf.hpp
perfomance_collection/include/: perf.hpp
perfomance_collection/source/: perf.cpp
rational_numbers/: CMakeLists.txt  main.cpp  rational.cpp  rational.hpp
rational_numbers/headers/: rational.hpp
rational_numbers/include/: rational.hpp
rational_numbers/source/: rational.cpp
resources/: test.txt
table/: CMakeLists.txt  main.cpp  table.cpp  table.hpp
table/headers/: table.hpp
table/include/: table.hpp
table/source/: table.cpp
table/sources/: table.cpp
